--- a/Registration.html
+++ b/Registration.html
@@ -26,7 +26,7 @@
                    </tr>
                    <tr>
                      <td><label for="PW">PW Confirm  </label></td>
-                     <td><input type="text" id="PW" name="PW"><br><br></td>
+                     <td><input type="password" id="PW" name="PW"><br><br></td>
                    </tr>
                    <tr>
                       <td><label for="bday">Birthday  </label></td>
