--- a/Index.html
+++ b/Index.html
@@ -3,21 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>About Python Assignments</title>
-        <link rel="stylesheet" href=C:\Users\Joseph\Desktop\DojoAssignments\WebFundamentals\css\style.css">
+        <link rel="stylesheet" href=css/style.css">
     </head>
     <body>
         <div class="container">
             <div class= "header">
                 <img src= "python1.png" alt="Python Logo">
                 <div>
-                   <p>Text Size: Normal / Large </p>
+                   <p>Text Size: <a class="gold" href="#">Normal</a> <span>|</span>
+                       <a class="gold" href="#">Large</a> </p>
                    <form action=""; method="">
                        <input type="text" placeholder="Search">
                        <input type="submit" value="GO">
                    </form>
                 </div>
             </div>
-                <ul>
+                <ul class="nav">
                    <li><a href="#">About</a></li>
                    <li><a href="#">Downloads</a></li>
                    <li><a href="#">Documentation</a></li>
@@ -42,11 +43,11 @@
                        analyzing data or powering many great languages for new
                        programmers but also pwoerful enough for seasoned developers
                        building what ever they wcan think of. </p>
-                       <p>Beautiful is better than ugly;</p>
-                       <p>Explicit is better than implicit;</p>
-                       <p>Simple is better than complicated;</p>
-                       <p>Readability counts;</p>
-                       <p>The Zen of Python;</p>
+                       <p class="large-text gold italic">Beautiful is better than ugly;</p>
+                       <p class="large-text gold italic">Explicit is better than implicit;</p>
+                       <p class="large-text gold italic">Simple is better than complicated;</p>
+                       <p class="large-text gold italic">Readability counts;</p>
+                       <p>The Zen of Python</p>
                 </div>
             </div>
             <div class="main-bottom">
@@ -80,7 +81,7 @@
         </div>
             <div class="footer">
                 <ul>
-                    li><a href='#'>Help adn General Contact</a></li>
+                    <li><a href='#'>Help and General Contact</a></li>
                     <li><a href='#'>Diversity Initiatives</a></li>
                     <li><a href='#'>Submit Website Bugs</a></li>
                 </ul>
