--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>About Python Assignments</title>
-        <link rel="stylesheet" href=css/style.css">
+        <link rel="stylesheet" href="C:\Users\Joseph\Desktop\DojoAssignments\WebFundamentals\css\style.css">
     </head>
     <body>
         <div class="container">
